src/sfu/src/Utils/IP.cpp

#line 1 "src/Utils/IP.rl"
#define MS_CLASS "Utils::IP"
// #define MS_LOG_DEV_LEVEL 3

#include "Utils.h"
#include "LoggerTag.h"
#include "base/error.h"
#include <uv.h>

namespace Utils
{
	int IP::GetFamily(const char *ip, size_t ipLen)
	{
		

		int ipFamily{ 0 };

		/**
		 * Ragel: machine definition.
		 */
		
#line 39 "src/Utils/IP.rl"


		/**
		 * Ragel: %%write data
		 * This generates Ragel's static variables.
		 */
		
#line 32 "src/Utils/IP.cpp"
static const int IPParser_start = 1;






#line 46 "src/Utils/IP.rl"

		// Used by Ragel.
		size_t cs;
		const unsigned char* p;
		const unsigned char* pe;

		p = (const unsigned char*)ip;
		pe = p + ipLen;

		/**
		 * Ragel: %%write init
		 */
		
#line 54 "src/Utils/IP.cpp"
	{
	cs = IPParser_start;
	}

#line 59 "src/Utils/IP.rl"

		/**
		 * Ragel: %%write exec
		 * This updates cs variable needed by Ragel.
		 */
		
#line 66 "src/Utils/IP.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 48u: goto st2;
		case 49u: goto st77;
		case 50u: goto st80;
		case 58u: goto st84;
	}
	if ( (*p) < 65u ) {
		if ( 51u <= (*p) && (*p) <= 57u )
			goto st83;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st86;
	} else
		goto st86;
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 46u: goto st3;
		case 58u: goto st19;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st16;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st16;
	} else
		goto st16;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 48u: goto st4;
		case 49u: goto st12;
		case 50u: goto st14;
	}
	if ( 51u <= (*p) && (*p) <= 57u )
		goto st13;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 46u )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 48u: goto st6;
		case 49u: goto st8;
		case 50u: goto st10;
	}
	if ( 51u <= (*p) && (*p) <= 57u )
		goto st9;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 46u )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	switch( (*p) ) {
		case 48u: goto tr20;
		case 49u: goto tr21;
		case 50u: goto tr22;
	}
	if ( 51u <= (*p) && (*p) <= 57u )
		goto tr23;
	goto st0;
tr20:
#line 26 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET;
			}
	goto st87;
tr141:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st87;
st87:
	if ( ++p == pe )
		goto _test_eof87;
case 87:
#line 174 "src/Utils/IP.cpp"
	goto st0;
tr21:
#line 26 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET;
			}
	goto st88;
st88:
	if ( ++p == pe )
		goto _test_eof88;
case 88:
#line 186 "src/Utils/IP.cpp"
	if ( 48u <= (*p) && (*p) <= 57u )
		goto tr23;
	goto st0;
tr23:
#line 26 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET;
			}
	goto st89;
st89:
	if ( ++p == pe )
		goto _test_eof89;
case 89:
#line 200 "src/Utils/IP.cpp"
	if ( 48u <= (*p) && (*p) <= 57u )
		goto tr20;
	goto st0;
tr22:
#line 26 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET;
			}
	goto st90;
st90:
	if ( ++p == pe )
		goto _test_eof90;
case 90:
#line 214 "src/Utils/IP.cpp"
	if ( (*p) == 53u )
		goto tr121;
	if ( (*p) > 52u ) {
		if ( 54u <= (*p) && (*p) <= 57u )
			goto tr20;
	} else if ( (*p) >= 48u )
		goto tr23;
	goto st0;
tr121:
#line 26 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET;
			}
	goto st91;
st91:
	if ( ++p == pe )
		goto _test_eof91;
case 91:
#line 233 "src/Utils/IP.cpp"
	if ( 48u <= (*p) && (*p) <= 53u )
		goto tr20;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 46u )
		goto st7;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st9;
	goto st0;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) == 46u )
		goto st7;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st6;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	switch( (*p) ) {
		case 46u: goto st7;
		case 53u: goto st11;
	}
	if ( (*p) > 52u ) {
		if ( 54u <= (*p) && (*p) <= 57u )
			goto st6;
	} else if ( (*p) >= 48u )
		goto st9;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 46u )
		goto st7;
	if ( 48u <= (*p) && (*p) <= 53u )
		goto st6;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 46u )
		goto st5;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 46u )
		goto st5;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto st4;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	switch( (*p) ) {
		case 46u: goto st5;
		case 53u: goto st15;
	}
	if ( (*p) > 52u ) {
		if ( 54u <= (*p) && (*p) <= 57u )
			goto st4;
	} else if ( (*p) >= 48u )
		goto st13;
	goto st0;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 46u )
		goto st5;
	if ( 48u <= (*p) && (*p) <= 53u )
		goto st4;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) == 58u )
		goto st19;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st17;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st17;
	} else
		goto st17;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) == 58u )
		goto st19;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st18;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st18;
	} else
		goto st18;
	goto st0;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	if ( (*p) == 58u )
		goto st19;
	goto st0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	if ( (*p) == 58u )
		goto tr29;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st20;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st20;
	} else
		goto st20;
	goto st0;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	if ( (*p) == 58u )
		goto st24;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st21;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st21;
	} else
		goto st21;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) == 58u )
		goto st24;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st22;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st22;
	} else
		goto st22;
	goto st0;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	if ( (*p) == 58u )
		goto st24;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st23;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st23;
	} else
		goto st23;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	if ( (*p) == 58u )
		goto st24;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) == 58u )
		goto tr35;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st25;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st25;
	} else
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) == 58u )
		goto st29;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st26;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st26;
	} else
		goto st26;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 58u )
		goto st29;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st27;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st27;
	} else
		goto st27;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 58u )
		goto st29;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st28;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st28;
	} else
		goto st28;
	goto st0;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 58u )
		goto st29;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) == 58u )
		goto tr41;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st30;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st30;
	} else
		goto st30;
	goto st0;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 58u )
		goto st34;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st31;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st31;
	} else
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( (*p) == 58u )
		goto st34;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st32;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st32;
	} else
		goto st32;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) == 58u )
		goto st34;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st33;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st33;
	} else
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 58u )
		goto st34;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( (*p) == 58u )
		goto tr47;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st35;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st35;
	} else
		goto st35;
	goto st0;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	if ( (*p) == 58u )
		goto st39;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st36;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st36;
	} else
		goto st36;
	goto st0;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	if ( (*p) == 58u )
		goto st39;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st37;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st37;
	} else
		goto st37;
	goto st0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	if ( (*p) == 58u )
		goto st39;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st38;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st38;
	} else
		goto st38;
	goto st0;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	if ( (*p) == 58u )
		goto st39;
	goto st0;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	if ( (*p) == 58u )
		goto tr53;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st40;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st40;
	} else
		goto st40;
	goto st0;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	if ( (*p) == 58u )
		goto st44;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st41;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st41;
	} else
		goto st41;
	goto st0;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	if ( (*p) == 58u )
		goto st44;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st42;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st42;
	} else
		goto st42;
	goto st0;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	if ( (*p) == 58u )
		goto st44;
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st43;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st43;
	} else
		goto st43;
	goto st0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	if ( (*p) == 58u )
		goto st44;
	goto st0;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	switch( (*p) ) {
		case 48u: goto st45;
		case 49u: goto st64;
		case 50u: goto st67;
		case 58u: goto tr62;
	}
	if ( (*p) < 65u ) {
		if ( 51u <= (*p) && (*p) <= 57u )
			goto st70;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st71;
	} else
		goto st71;
	goto st0;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
	switch( (*p) ) {
		case 46u: goto st46;
		case 58u: goto st63;
	}
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto st60;
	} else if ( (*p) > 70u ) {
		if ( 97u <= (*p) && (*p) <= 102u )
			goto st60;
	} else
		goto st60;
	goto st0;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
	switch( (*p) ) {
		case 48u: goto st47;
		case 49u: goto st56;
		case 50u: goto st58;
	}
	if ( 51u <= (*p) && (*p) <= 57u )
		goto st57;
	goto st0;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	if ( (*p) == 46u )
		goto st48;
	goto st0;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	switch( (*p) ) {
		case 48u: goto st49;
		case 49u: goto st52;
		case 50u: goto st54;
	}
	if ( 51u <= (*p) && (*p) <= 57u )
		goto st53;
	goto st0;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
	if ( (*p) == 46u )
		goto st50;
	goto st0;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
	switch( (*p) ) {
		case 48u: goto tr77;
		case 49u: goto tr78;
		case 50u: goto tr79;
	}
	if ( 51u <= (*p) && (*p) <= 57u )
		goto tr80;
	goto st0;
tr77:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st92;
st92:
	if ( ++p == pe )
		goto _test_eof92;
case 92:
#line 787 "src/Utils/IP.cpp"
	if ( (*p) == 37u )
		goto st51;
	goto st0;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr81;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr81;
	} else
		goto tr81;
	goto st0;
tr81:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st93;
st93:
	if ( ++p == pe )
		goto _test_eof93;
case 93:
#line 814 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr123;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr123;
	} else
		goto tr123;
	goto st0;
tr123:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st94;
st94:
	if ( ++p == pe )
		goto _test_eof94;
case 94:
#line 834 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr124;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr124;
	} else
		goto tr124;
	goto st0;
tr124:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st95;
st95:
	if ( ++p == pe )
		goto _test_eof95;
case 95:
#line 854 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr125;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr125;
	} else
		goto tr125;
	goto st0;
tr125:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st96;
st96:
	if ( ++p == pe )
		goto _test_eof96;
case 96:
#line 874 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr126;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr126;
	} else
		goto tr126;
	goto st0;
tr126:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st97;
st97:
	if ( ++p == pe )
		goto _test_eof97;
case 97:
#line 894 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr127;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr127;
	} else
		goto tr127;
	goto st0;
tr127:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st98;
st98:
	if ( ++p == pe )
		goto _test_eof98;
case 98:
#line 914 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr128;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr128;
	} else
		goto tr128;
	goto st0;
tr128:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st99;
st99:
	if ( ++p == pe )
		goto _test_eof99;
case 99:
#line 934 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr129;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr129;
	} else
		goto tr129;
	goto st0;
tr129:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st100;
st100:
	if ( ++p == pe )
		goto _test_eof100;
case 100:
#line 954 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr130;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr130;
	} else
		goto tr130;
	goto st0;
tr130:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st101;
st101:
	if ( ++p == pe )
		goto _test_eof101;
case 101:
#line 974 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr131;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr131;
	} else
		goto tr131;
	goto st0;
tr131:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st102;
st102:
	if ( ++p == pe )
		goto _test_eof102;
case 102:
#line 994 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr132;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr132;
	} else
		goto tr132;
	goto st0;
tr132:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st103;
st103:
	if ( ++p == pe )
		goto _test_eof103;
case 103:
#line 1014 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr133;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr133;
	} else
		goto tr133;
	goto st0;
tr133:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st104;
st104:
	if ( ++p == pe )
		goto _test_eof104;
case 104:
#line 1034 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr134;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr134;
	} else
		goto tr134;
	goto st0;
tr134:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st105;
st105:
	if ( ++p == pe )
		goto _test_eof105;
case 105:
#line 1054 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr135;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr135;
	} else
		goto tr135;
	goto st0;
tr135:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st106;
st106:
	if ( ++p == pe )
		goto _test_eof106;
case 106:
#line 1074 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr136;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr136;
	} else
		goto tr136;
	goto st0;
tr136:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st107;
st107:
	if ( ++p == pe )
		goto _test_eof107;
case 107:
#line 1094 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr137;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr137;
	} else
		goto tr137;
	goto st0;
tr137:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st108;
st108:
	if ( ++p == pe )
		goto _test_eof108;
case 108:
#line 1114 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr138;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr138;
	} else
		goto tr138;
	goto st0;
tr138:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st109;
st109:
	if ( ++p == pe )
		goto _test_eof109;
case 109:
#line 1134 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr139;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr139;
	} else
		goto tr139;
	goto st0;
tr139:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st110;
st110:
	if ( ++p == pe )
		goto _test_eof110;
case 110:
#line 1154 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr140;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr140;
	} else
		goto tr140;
	goto st0;
tr140:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st111;
st111:
	if ( ++p == pe )
		goto _test_eof111;
case 111:
#line 1174 "src/Utils/IP.cpp"
	if ( (*p) < 65u ) {
		if ( 48u <= (*p) && (*p) <= 57u )
			goto tr141;
	} else if ( (*p) > 90u ) {
		if ( 97u <= (*p) && (*p) <= 122u )
			goto tr141;
	} else
		goto tr141;
	goto st0;
tr78:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st112;
st112:
	if ( ++p == pe )
		goto _test_eof112;
case 112:
#line 1194 "src/Utils/IP.cpp"
	if ( (*p) == 37u )
		goto st51;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto tr80;
	goto st0;
tr80:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
	goto st113;
st113:
	if ( ++p == pe )
		goto _test_eof113;
case 113:
#line 1210 "src/Utils/IP.cpp"
	if ( (*p) == 37u )
		goto st51;
	if ( 48u <= (*p) && (*p) <= 57u )
		goto tr77;
	goto st0;
tr79:
#line 31 "src/Utils/IP.rl"
	{
				ipFamily = AF_INET6;
			}
